[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragtrain"
version = "0.0.1"
authors = [{ name = "Trevor Chow", email = "tmychow@gmail.com"}]
description = "It is a ragtrain!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tmychow/ragtrain"